--- a/verslag/report.tex
+++ b/verslag/report.tex
@@ -84,7 +84,7 @@ We formulate the following questions and provide our hypotheses for the answers 
 We expect that the company can make more profit using DynCNET than using CNCP, which should be more profitable than CNET.
 
 
-\item\textit{Is it possible to make a profit using any of the 3 approaches?}\\
+\item\textit{Is it possible to make a profit using any of the three approaches?}\\
 We expect that all three approaches should be profitable given the right number of warehouses, drones and clients.
 
 \item\textit{What is the influence of the number of drones on the profit?}\\
@@ -116,15 +116,15 @@ In this section we describe the theory of the Contract Net Protocol and the two 
 
 CNET tries to solve the problem of assigning tasks to idle agents in the most efficient way. Moreover, this problem needs to be solved in a distributed manner, without a central authority that tracks tasks and assigns them with global knowledge.
 
-CNET relies on the negotiation of contracts between a manager and a contractor for the execution of a task. The manager (or initiator) launches a tender for the execution of a task and will monitor the execution and process the results once they arrive. The contractor (or participant) bids on the tenders and when it wins, executes the task and submits the results to the manager. Each agent can be one of these roles for each individual task. This can also mean that an agent acts as a contractor for one task and as a manager for sub-tasks of this task to distribute the workload over several agents.
+CNET relies on the negotiation of contracts for the execution of a task between a manager and a contractor. The manager (or initiator) launches a tender for the execution of a task and will monitor the execution and process the results once they arrive. The contractor (or participant) bids on the tenders and when it wins, executes the task and submits the results to the manager. Each agent can be one of these roles for each individual task. This can also mean that an agent acts as a contractor for one task and as a manager for sub-tasks of this task to distribute the workload over several agents.
 
 The Contract Net Protocol is defined by the messages and the information that is contained within them. By having a common language for these messages, all agents can communicate with each other and new agents can immediately start listening for new messages and participate in the negotiation process. There are three types of messages: those related to task announcements, those related to bids and those for the reporting of task results.
 
-A manager initiates the contract negotiation process by adversiting that task with a task announcement message. This message can either be broadcasted to all agents or sent only to one or a few nodes in a focused manner. The task announcement message contains four main parts: an eligibility specification, a task abstraction, a bid specification and an expiration time. The eligibility specification describes what criteria an agent must meet to be able to bid and eventually possibly receive the contract and execute the task. The task abstraction is a description of the task to be executed. The bid specification outlines the expected form of a bid. The expiration time marks the final time at which a bid may be submitted.
+A manager initiates the contract negotiation process by advertising a task with a task announcement message. This message can either be broadcasted to all agents or sent only to one or a few agents in a focused manner. The task announcement message contains four main parts: an eligibility specification, a task abstraction, a bid specification and an expiration time. The eligibility specification describes what criteria an agent must meet to be able to bid and eventually possibly receive the contract and execute the task. The task abstraction is a description of the task to be executed. The bid specification outlines the expected form of a bid. The expiration time marks the final time at which a bid may be submitted.
 
 Whenever a task announcement arrives at an agent that wants to act as a contractor, all of these parts of the announcement allow contractors to decide whether and when to submit a bid. They add the announcement to a list of received and not expired announcements if they're eligible. The announcements in the list are ranked on interest to the agent. This ranking is a task-specific operation and is based on the information contained within the task announcement.
 
-A busy agent cannot bid while busy, but continues to process the task announcements while executing its task. When this task completes, it can then check the list of task announcements and pick a task to submit a bid on. An idle agent will decide to bid on a task either immediately when it arrives or when it expires. It either submits a bid to the most interesting task or waits for new (better) task announcements. In a bid, an agent describes its specification in the node abstraction slot. It can also indicate additional information that will be required if the agent may execute the task. Whenever an agent submits a bid to a task, it allocates some resources to that task. This is called early commitment. That agent can then not bid on other tasks at the same moment. This is done to avoid too many task awards to one agent, which would all need to be queued and would slow down the system performance by putting too much load on one agent, which means tasks get executed later.
+An agent cannot bid while busy, but a busy agent continues to process the task announcements while executing its task. When this task completes, it can then check the list of task announcements and pick a task to submit a bid on. An idle agent will decide to bid on a task either immediately when it arrives or when it expires. It either submits a bid to the most interesting task or waits for new (better) task announcements. In a bid, an agent describes its specification in the node abstraction slot. It can also indicate additional information that will be required if the agent may execute the task. Whenever an agent submits a bid to a task, it allocates some resources to that task. This is called early commitment. That agent can then not bid on other tasks at the same moment. This is done to avoid too many task awards to one agent, which would all need to be queued and would slow down the system performance by putting too much load on one agent, which means tasks get executed later.
 
 Bids arrive at the manager and are also ranked and stored in a list until the task can be awarded. The manager can either award a contract immediately if a satisfactory bid arrives (even before the expiration time) or wait for further bids. When the task announcement expires, it can either award the contract to the best bidder in its list or advertise the task again (immediately or after waiting some time). The task is therefore not necessarily awarded when it expires. If a manager awards a contract, it sends a message to the winning contractor, who can start executing the task. When the contractor is finished, it sends a report to the manager with the results of the execution.
 
@@ -139,7 +139,7 @@ The major shortcoming of CNET that CNCP tries to address is the early commitment
 
 To resolve this issue, in the CNCP the full commitment to a task is moved to the awarding phase: if a contractor is awarded a task, only then does it allocate its resources and stop bidding on other tasks. While a bid has been submitted but the task has not been awarded yet, the contractor can continue bidding on other tasks. When a manager wants to award a task to a contractor, it first contacts that contractor with the request to accept the task. This contractor may however already been awarded a different task, in which case it will refuse the task. The manager may then try to award the task the next best contractor. This either continues until a contractor accepts the task, in which case the contractor can start executing the task and the manager can send a rejection message to the other bidders, or if no contractor accepts it, the manager can announce the task again (possibly after waiting some time).
 
-CNCP requires two more messages to allocate a task: one to request the execution of a task by the manager and one reply to this message by the contractor. If the first contacter bidder refuses, the next best bidder has to be tried and two messages need to be sent. In the worst case this means 2$n$ extra messages (with $n$ the number of bidders) must be sent.
+CNCP requires two more messages to allocate a task: one to request the execution of a task by the manager and one reply to this message by the contractor. If the first contacted bidder refuses, the next best bidder has to be tried and two more messages need to be sent. In the worst case this means 2$n$ extra messages (with $n$ the number of bidders) must be sent.
 
 \subsection{Dynamic Contract Net}
 The Dynamic Contract Net Protocol, or DynCNET, was conceived as an extension to the Contract Net Protocol by Weyns et al. \cite{DynCNET, weyns2007dyncnet, DBLP:conf/eumas/WeynsBHS06}. 
@@ -151,29 +151,33 @@ DynCNET changes the acceptance of task by a winning contractor to a provisional 
 The synchronization between managers and contractor to assess their current state requires some additional messaging. If a manager cancels a contract, it needs to notify the original contractor that the task has been awarded to another agent. Inversely, a contractor that takes up another task needs to notify the manager of the original task that it is no longer committed to executing that original task. Finally the contractor needs to send a message to the manager when it starts executing the task, so the manager can stop announcing the task to other agents.
 
 \subsection{Alternative extensions}
-In literature, other extensions of CNET can be found. \cite{TentativeBidding} describes a protocol that divides the bidding phase into two: pre-bidding and definitive bidding. The first round, pre-bidding, is only tentative. When bids have been received, instead of awarding the task to a participant the initiator informs all the participants of the tentative results. Based on these tentative results and on how the world and other running bidding processes evolve, participants can still change their bids. Once a participant has been tentatively accepted, it can send a definitive bid to the initiator.
+In literature, other extensions of CNET can be found. \cite{TentativeBidding} describes a protocol that divides the bidding phase in two: pre-bidding and definitive bidding. The first round, pre-bidding, is only tentative. When bids have been received, instead of awarding the task to a participant the initiator informs all the participants of the tentative results. Based on these tentative results and on how the world and other running bidding processes evolve, participants can still change their bids. Once a participant has been tentatively accepted, it can send a definitive bid to the initiator.
 
-If this bid is still better than all the tentative bids from the other participants, the participant will be awarded the task and both agents commit to the contract. All other participants will be informed that the bidding process is finished. If the definitive bid is not the best bid, the participant gets tentatively or definitively declined. In case of the former, it can retry to get the task by submitting a new tentative bid. This protocol can be seen as an extension on CNCP. Participants who get accepted, can use the definitive bid to accept or decline: they will submit a high bid in the former case and a low bid in the latter. The advantage of this protocol over CNCP is that participants who initially get rejected can still improve their bid.
+If this bid is still better than all the tentative bids from the other participants, the participant will be awarded the task and both agents commit to the contract. All other participants will be informed that the bidding process is finished. If the definitive bid is not the best bid, the participant gets tentatively or definitively declined. In case of the former, it can retry to get the task by submitting a new tentative bid.
 
-\cite{CNETIterativeStandard} describes a similar protocol: iterated contract net (ICN). When an initiator receives bids, it can choose to accept a bid, or can iterate the process by issuing an adapted task announcement to (a subset of) the bidders. The intent of this next iteration is to receive better bids. The protocol stops when a participant is awarded the contract, the initiator stops issuing calls for proposals (because all bids are unsatisfactory) or all participants stop bidding.
+This protocol can be seen as an extension on CNCP. Participants who get accepted, can use the definitive bid to accept or decline: they will submit a high bid in the former case and a low bid in the latter. The advantage of this protocol over CNCP is that participants who initially get rejected can still improve their bid.
+
+\cite{CNETIterativeStandard} describes a similar protocol: iterated contract net (ICN). When an initiator receives bids, it can choose to accept a bid, or can iterate the process by issuing an adapted task announcement to (a subset of) the bidders. The intention of this next iteration is to receive better bids. The protocol stops when a participant is awarded the contract, the initiator stops issuing calls for proposals (because all bids are unsatisfactory) or all participants stop bidding.
 
 One of the main differences between \cite{TentativeBidding} and ICN is that in ICN new task announcements are issued, while the same task announcement is reused in \cite{TentativeBidding}. An initiator in the ICN protocol can thus actively try to increase the price of the contract.  
 
-\cite{LeveledCommitment} uses game theory to prove that a leveled commitment is to be preferred over full commitment in all situations. In the negotiation of a contract in this protocol, a decommitting penalty is agreed, which might be different for both agents. When an agent wants to cancel the contract, it then has to pay this decommitting fee to the other agent. The fee becomes a factor in calculating whether or not it is interesting to cancel the current contract in favor of another contract.\footnote{The paper proves, using the chicken game from game theory, that the consideration by an agent of canceling a contract is more than just checking if the added profit of the new contract is more than the decommitting fee that would then have to be paid. The other agent might decommit at some point, which means that this agent gets released from the contract without paying a fee and even receives the fee from the other agent.} It also allows for contracts that were not possible using full commitment. Normally the benefit from an offered contract could be lower than the expected benefit from other contracts that have not yet been announced, which means the agent would wait and not commit to that offered contract. By having the right decommitting fees, this offered leveled commitment contract could become interesting and could be taken up. As these protocols are not part of our objective, we have not implemented our design for them.
+\cite{LeveledCommitment} uses game theory to prove that a leveled commitment is to be preferred over full commitment in all situations. In the negotiation of a contract in this protocol, a decommitting penalty is agreed, which might be different for both agents. When an agent wants to cancel the contract, it then has to pay this decommitting fee to the other agent. The fee becomes a factor in calculating whether or not it is interesting to cancel the current contract in favor of another contract.\footnote{The paper proves, using the chicken game from game theory, that the consideration by an agent of canceling a contract is more than just checking if the added profit of the new contract is more than the decommitting fee that would then have to be paid. The other agent might decommit at some point, which means that this agent gets released from the contract without paying a fee and even receives the fee from the other agent.} It also allows for contracts that were not possible using full commitment. Normally the benefit from an offered contract could be lower than the expected benefit from other contracts that have not yet been announced, which means the agent would wait and not commit to that offered contract. By having the right decommitting fees, this offered leveled commitment contract could become interesting and could be taken up.
+
+As these protocols are not part of our objective, we have not implemented our design for them.
 
 \section{Multi-agent system design}\label{sec:masdesign}
 \subsection{Design}
 We consider a logistics problem where a company serves an area with a fleet of drones. In this area, a number of clients appear with an order for a specific product. One of the drones takes up the order and is dispatched to a warehouse to collect a package with that product. Finally it flies to the client to deliver the package. The goal is to maximize the profit earned on making these deliveries.
 
-Across the world several warehouses are located. For simplification, these warehouses have an infinite stock of every package that a client could potentially order. Drones can pick up packages at these warehouses for a price that varies per warehouse in a range of 80 to 120\% of that package's market price. These warehouses are divided over the whole area in such a way that a clustering of warehouses is avoided as much as possible. To achieve this, the number of warehouse is split in powers of two (e.g. 5 = 4 ($2^2$) + 1 ($2^0$)). For every power of two x, the whole area is divided in x equiareal rectangles, each containing one warehouse at a uniformly random position.
+Across the world several warehouses are located. For simplification, these warehouses have an infinite stock of every package that a client could potentially order. Drones can pick up packages at these warehouses for a price that varies per warehouse in a range of 80 to 120\% of that package's market price. These warehouses are divided over the whole area in such a way that a clustering of warehouses is avoided as much as possible. To achieve this, the number of warehouse is split into powers of two (e.g. 5 = 4 ($2^2$) + 1 ($2^0$)). For every power of two $x$, the whole area is divided in $x$ equiareal rectangles, each containing one warehouse at a uniformly random position.
 
 Drones can unexpectedly crash and fail. The drone is then written off and the cost of a drone is subtracted from the profit. Drones are also constrained by their batteries, they only have a limited range before they need to charge. Whenever the battery level gets very low, the chances of crashes increase, as the power that comes from the batteries becomes less and less stable. Drones can charge their batteries at the warehouses for a certain cost. They will intelligently choose a route when delivering a package to try as much as possible to avoid having a low battery.
 
-A client has only one order and when that order is delivered, the client stops participating. Client with multiple orders can be reduced to this model by creating multiple clients with one order each. The order consists of the type of package a client wants, the end time by which it wants to have received the package, the price it is willing to pay and the fine it levies if the package is not delivered before the end time. The price and the fine vary around the market price. There are both clients that are initially present in the world and clients that appear randomly afterwards, uniformly distributed over time.
+A client has only one order and when that order is delivered, the client stops participating. A client with multiple orders can be reduced to this model by creating multiple clients with one order each. The order consists of the type of package a client wants, the end time by which it wants to have received the package, the price it is willing to pay and the fine it levies if the package is not delivered before the end time. The price and the fine vary around the market price. There are both clients that are initially present in the world and clients that appear randomly afterwards, uniformly distributed over time.
 
 For simplification, all agents are completely aware of the whole world and can send messages to all other agents with 100\% reliability. 
 
-The failures of drones are based on a Poisson distribution and are used in calculating the bid that drones will make on tasks. The bid is based on the estimated minimal cost for a drone to serve the client. The estimated cost consists of four parts: the cost to buy the package from a warehouse; the cost of charging for the battery drain caused by moving between the drone's current location, the warehouse, the client and back to a warehouse to charge; the probabilistic cost of a drone failure on that trajectory; and the price the client is willing to pay (which is subtracted from the other costs). The drone will decide for which warehouse this combined cost is the lowest and submit that as its bid, on the condition that the cost is lower than the fine (then it would just be better not to bother delivering), that it can reach with some battery power left and that it can deliver before the end time of the order.
+The failures of drones are based on a Poisson distribution and are used in calculating the bid that drones will make on tasks. The bid is based on the estimated minimal cost for a drone to serve the client. The estimated cost consists of four parts: the cost to buy the package from a warehouse; the cost of charging for the battery drain caused by moving between the drone's current location, the warehouse, the client and back to a warehouse to charge; the probabilistic cost of a drone failure on that trajectory; and the price the client is willing to pay (which is subtracted from the other costs). The drone will decide for which warehouse this combined cost is the lowest and submit that as its bid, on the condition that the cost is lower than the fine (then it would just be better not to bother delivering), that it can arrive with some battery power left and that it can deliver before the end time of the order.
 
 \subsubsection{Agent state machines}
 Both the drone and client use finite state machines to define in which phase of the contract negotiation they are situated.
@@ -186,7 +190,7 @@ Both the drone and client use finite state machines to define in which phase of 
 \end{figure*}
 
 
-Figure~\ref{fig:droneFSM} shows the FSM for the drone agent in the three different protocols\footnote{Not represented in the figure is the failed state, in case the drone crashes. A drone can enter this state from all other states and can never leave it again}. The drone starts in the \texttt{IDLE} state. In this state, it will move to the closest warehouse, where it will enter the \texttt{CHARGING} state and start charging its battery. In CNET and CNCP, a drone can bid in the green states. In DynCNET, a drone can bid in the green and yellow states. In CNET, a drone will enter the \texttt{PROPOSED\_BID} state once it has submitted a bid. It will reenter the \texttt{IDLE} state if the client declines. In CNCP and DynCNET, the drone stays in either \texttt{IDLE} or \texttt{CHARGING} and may continue bidding.
+Figure~\ref{fig:droneFSM} shows the FSM for the drone agent in the three different protocols\footnote{Not represented in the figure is the failed state, in case the drone crashes. A drone can enter this state from all other states and can never leave it again.}. The drone starts in the \texttt{IDLE} state. In this state, it will move to the closest warehouse, where it will enter the \texttt{CHARGING} state and start charging its battery. In CNET and CNCP, a drone can bid in the green states. In DynCNET, a drone can bid in the green and yellow states. In CNET, a drone will enter the \texttt{PROPOSED\_BID} state once it has submitted a bid. It will reenter the \texttt{IDLE} state if the client declines. In CNCP and DynCNET, the drone stays in either \texttt{IDLE} or \texttt{CHARGING} and may continue bidding.
 
 If the client awards the task to the drone, the drone goes into the \texttt{PICKING\_UP} state. There it will start moving to the warehouse for which the estimated cost was the lowest. When it gets there, it will go to the \texttt{CHARGING\_FOR\_CONTRACT} state and start charging until either it is sufficiently charged or until it is time to leave due to the client's delivery deadline. In DynCNET, the drone may continue bidding in the \texttt{PICKING\_UP} and \texttt{CHARGING\_FOR\_CONTRACT} states. If it wins another contract, it will stay in or go to the \texttt{PICKING\_UP} state. When the drone leaves, it will pick up the package from the warehouse and enter the \texttt{DELIVERING} state. From then on, it will keep flying to the client until it has arrived, upon which it will deliver the package to the client and enter the \texttt{IDLE} state, thereby moving to the closest warehouse.
 
@@ -199,14 +203,14 @@ The \texttt{PROPOSED\_BID} state is only used in CNET, not in CNCP nor DynCNET. 
     \label{fig:clientFSM}
 \end{figure*}
     
-Figure~\ref{fig:clientFSM} shows the FSM for the client agent in the three different protocols. The client starts in the \texttt{AWARDING} state. When the task has been awarded, it enters the \texttt{ASSIGNED} state. From then on, the client will go to the \texttt{EXECUTING} and \texttt{DELIVERED} state respectively when the drone picks up and delivers the package. Only a drone failure or the cancellation of a contract in DynCNET can change the state flow, by having the client return to the \texttt{AWARDING} state. If the maximum delivery time for the client has passed before a drone delivered the package, the client will enter the (final) \texttt{OVERTIME} state.
+Figure~\ref{fig:clientFSM} shows the FSM for the client agent in the three different protocols. The client starts in the \texttt{AWARDING} state. When its task has been awarded, it enters the \texttt{ASSIGNED} state. From then on, the client will go to the \texttt{EXECUTING} and \texttt{DELIVERED} state respectively when the drone picks up and delivers the package. Only a drone failure or the cancellation of a contract in DynCNET can change the state flow, by having the client return to the \texttt{AWARDING} state. If the maximum delivery time for the client has passed before a drone delivered the package, the client will enter the (final) \texttt{OVERTIME} state.
 
 In CNET and CNCP, a client can only send task announcements while in the \texttt{AWARDING} state. In DynCNET, it can also send task announcements in the \texttt{ASSIGNED} state, until the package is picked up by the drone and the client enters the \texttt{EXECUTING} state.
 
 \subsection{Comparison with existing MAS from literature}
 When clients enter the world, they will act as managers and broadcast their task announcement to all agents.\footnote{This includes other clients, who will ignore all task announcements. RinSim does not (yet) provide a broadcast to a subset of all agents, in this case the drones.} This task announcement consists only of the order that a client has. All drones are considered to be eligible. As there is only one type of bid, the bid specification defined in CNET is implicit and left out of the task announcement. There is no separate expiration time for bidding: drones are expected to bid immediately and the task announcement will be sent at the latest on the end time of the order. 
 
-In CNET, only one bid per opportunity (tick) is allowed, so the drone bids on the task for which its cost is the lowest of all received task announcements. Afterwards the drone is committed to that task and cannot bid on other tasks until it is either awarded the task and execution is complete, or until the client explicitly refuses the bid. In the original CNET protocol, a drone would be allowed to bid again at the next tick. Although \cite{CNET} suggests that not allowing this might cause significant delays in the system, due to the fact that tasks do not have a bidding expiration time, that clients immediately award contracts if possible and that drones only have one resource, i.e. they can only serve one client at a time, we feel that it does not have as significant an effect. In CNCP and DynCNET, the drone bids on every incoming task while it is not committed to a contract.
+In CNET, only one bid per opportunity (tick) is allowed, so the drone bids on the task for which its estimated cost is the lowest of all received task announcements. Afterwards the drone is committed to that task and cannot bid on other tasks until it is either awarded the task and execution is complete, or until the client explicitly refuses the bid. In the original CNET protocol, a drone would be allowed to bid again at the next tick. Although \cite{CNET} suggests that not allowing this might cause significant delays in the system, due to the fact that tasks do not have a bidding expiration time, that clients immediately award contracts if possible and that drones only have one resource, i.e. they can only serve one client at a time, we feel that it does not have as significant an effect. In CNCP and DynCNET, the drone bids on every incoming task while it is not committed to a contract.
 
 The extension where drones that do not bid can respond with their reason is also supported. If a drone has no warehouse for which they can deliver the package for a cost below the fine, they declare themselves as ineligible. If a drone is delivering a package, it answers that it is busy. If in CNET there is a valid bid for a task but it is not the lowest cost of all task announcements, it replies that it has given the task a low ranking.
 
@@ -218,13 +222,13 @@ In CNCP and DynCNET, drones can submit multiple bids at the same time and could 
 
 The other awarded tasks are not queued as in the original CNET protocol, but released for other drones to fulfill, as delivery takes too long for queuing to be sensible. Clients whose assignments have been denied will reannounce the task instead of trying the next best bidder as in the original CNCP, as chances are high that due to the short time between announcements and bidding, this next best bidder has already been assigned another task. 
 
-In the original CNCP the acceptance of a task by a drone is a two-step process: the client first requests that a drone accepts a task, the drone then replies whether they can accept or not and only then does the client formally accept the drone's proposal, award it the task and commit to the contract. This process is merged in our design into a one message that the client is willing to accept the proposal. The drone can then refuse if necessary. While the original CNCP therefore requires $O(2*n)$ more messages, our design only requires one extra message per bidding round.  The number of bidding rounds is increased in comparison with the original CNCP protocol.
+In the original CNCP the acceptance of a task by a drone is a two-step process: the client first requests that a drone accepts a task, the drone then replies whether they can accept or not and only then does the client formally accept the drone's proposal, award it the task and commit to the contract. This process is merged in our design into one message that the client is willing to accept the proposal. The drone can then refuse if necessary. While the original CNCP therefore requires $O(2*n)$ more messages, our design only requires one extra message per bidding round.  The number of bidding rounds is however increased in comparison with the original CNCP protocol.
 
 Once a drone has received a task, it starts executing the task by flying to the warehouse with the lowest estimated cost (that was calculated when bidding). It picks up the package at the warehouse and can possibly charge its battery there, either until it must leave or until the battery is sufficiently charged to minimize the risk of failure. It then flies to the client, delivers the package and flies to the closest warehouse to charge and wait for new tasks. The client is sent a message when the package is picked up and when it is delivered.
 
 In case the drone would crash, the notification of this failure to the client is modeled by sending one last signal to the client. In practice, outside a simulator, a polling approach might be used. After the client is aware of the failure, the client announces the task again.
 
-A potential risk of DynCNET is oscillation of tasks between drones. \cite{DynCNET} describes a solution by limiting the areas of interest, e.g. by broadcasting task announcement only within a limited range. In our design, the agents are limited only by their battery, but not with a communications range. We did not take any special action to prevent the oscillation of tasks between drones.
+A potential risk of DynCNET is oscillation of tasks between drones. \cite{DynCNET} describes a solution by limiting the areas of interest, e.g. by broadcasting a task announcement only within a limited range. In our design, the agents are limited only by their battery, but not with a communications range. We did not take any special action to prevent the oscillation of tasks between drones.
 
 \section{Experiments}\label{sec:experiments}
 To test our hypotheses in our multi-agent system design, we experiment using implementations of this design for the three protocols.
@@ -283,7 +287,7 @@ All experiments were run using RinSim 4.1.0 on computers at the P\&O lab at the 
 			Prices packages & \euro{100}, \euro{200}, \euro{500}, \euro{1000} \\
 			Speed drone & 50 km/h \\
 			Range battery & 15 km \\
-			World size & 10km x 10km \\
+			Size world & 10km x 10km \\
 			Failure lambda drone & 0.1 \small($< 10\%$ battery)\normalsize, 0.01 \small($< 20\%$)\normalsize, 0.0001 /km\\
 			Price drone & \euro{3000} \\
 			Cost energy & \euro{2}/km \\
@@ -335,8 +339,8 @@ When increasing the number of clients (figure~\ref{fig:dynamicclients-profit-gri
 
 Figure~\ref{fig:drones-deliverytime} shows the influence of the number of drones on the delivery time. For 1 drone, DynCNET delivers the fastest, while there is no significant difference between CNET and CNCP as both protocols don't behave differently if there is only one drone. If two or more drones are present in the world, CNCP will deliver faster than CNET, which will deliver faster than DynCNET.
 
-The impact of the protocol on the number of clients that don't get their package delivered also depends on how many clients and drones there are (figure~\ref{fig:drones-delivered} and \ref{fig:dynamicclients-delivered-grid2}). For a small number of clients (less than 20 clients initially and less than 50 clients after the start) or a large number of drones (10 drones), CNCP will deliver the most packages, followed by CNET and DynCNET. In other scenarios in the first experiment, CNCP will still outperform the other two protocols. For 9 drones, there is no significant difference between CNET and DynCNET. But when there are 8 drones, DynCNET outperforms CNET. When the number of drones decreases further (to 4 drones or less), CNET outperforms DynCNET again. 
-In our second experiment, DynCNET outperforms CNCP when the number of clients increases (figure~\ref{fig:dynamicclients-delivered-grid2}). However, in our experiments CNET never outperformed CNCP. At best, it can keep up with CNCP when there is only 1 drone due to similar behaviour. 
+The impact of the protocol on the number of clients that don't get their package delivered also depends on how many clients and drones there are (figures~\ref{fig:drones-delivered} and \ref{fig:dynamicclients-delivered-grid2}). For a small number of clients (less than 20 clients initially and less than 50 clients after the start) or a large number of drones (10 drones), CNCP will deliver the most packages, followed by CNET and DynCNET. In other scenarios in the first experiment, CNCP will still outperform the other two protocols. For 9 drones, there is no significant difference between CNET and DynCNET. But when there are 8 drones, DynCNET outperforms CNET. When the number of drones decreases further (to 4 drones or less), CNET outperforms DynCNET again. 
+In our second experiment, DynCNET outperforms CNCP when the number of clients increases (figure~\ref{fig:dynamicclients-delivered-grid2}). However, in our experiments CNET never outperformed CNCP. At best, it can keep up with CNCP when there is only 1 drone due to similar behavior.
 
 When there are a small number of clients (5 initial clients and 10 extra clients), no significant difference in the number of exchanged messages could be found between CNET and CNCP. However, in other configurations with more clients, CNCP actually needs more messages than CNET (not less). DynCNET always needs more messages than the other two protocols.
 
