--- a/verslag/report.tex
+++ b/verslag/report.tex
@@ -8,6 +8,7 @@
 \usepackage{url}
 \usepackage{caption}
 \usepackage[gen]{eurosym}
+\usepackage[bookmarks, colorlinks, allcolors=black]{hyperref}
 
 \setlength{\parskip}{0.25em}
 
